<resources>
    <string name="app_name">CallRecorder</string>
    <string name="permission_positive_button">OK</string>
    <string name="permission_negative_button">Cancel</string>
    <string name="message_permission_phone_state">to read phone state</string>
    <string name="message_permission_write_external_storage">to write to external storage</string>
    <string name="message_permission_read_call_log">to read call log</string>
    <string name="start_message_permission">You need to grant access  </string>
    <string name="pref_file_name">Prefix</string>
    <string name="pref_file_name_default">Record</string>
    <string name="pref_flag_show_direction">Show direction call</string>
    <string name="pref_category_name_file">Name of File</string>
    <string name="pref_flag_show_number">Show phone number</string>
    <string name="settings">Settings</string>
    <string name="message_problem_with_permission">Some permissions is denied</string>
    <string name="message_permission_record_audio">to record audio</string>
    <string name="pref_category_recorder">Recorder</string>
    <string name="pref_audio_source">Audio source</string>
    <string name="pref_audio_source_voice_communication" translatable="false">VOICE_COMMUNICATION</string>
    <string name="pref_audio_source_mic" translatable="false">MIC</string>
    <string name="pref_audio_source_voice_call" translatable="false">VOICE_CALL</string>
    <string name="pref_audio_source_default" translatable="false">DEFAULT</string>
    <string name="pref_speakerphone">Speakerphone</string>
    <string name="channel_name" translatable="false">Recorder channel</string>
    <string name="notification_title">Call Recorder</string>
    <string name="notification_text_mode_of_work">Mode of work</string>
    <string name="notification_text_recorder_status">Recorder ready</string>
    <string name="notification_action_start_recorder">Start</string>
    <string name="notification_action_stop_recorder">Stop</string>
    <string name="state_service">Recorder</string>
    <string name="pref_category_general">General</string>
    <string name="pref_mode_of_work_default">Background</string>
    <string name="pref_mode_of_work_on_shake">On shake</string>
    <string name="pref_mode_of_work_on_button">On button</string>
    <string name="pref_mode_of_work">Mode of work</string>
    <string name="pref_flag_start_mode_only_with_call">Start mode only with call</string>
    <string name="pref_count_of_shake">Count of shake</string>
    <string name="pref_sensitivity_shake">Sensitivity</string>
    <string name="pref_flag_vibrate_on_shake">Vibration</string>
    <string name="pref_category_on_shake_mode">Shake mode</string>
    <string name="seekBar_pref_summary" translatable="false">%1$d %2$s</string>
    <string-array name="entries_of_audio_source">
        <item>VOICE_COMMUNICATION</item>
        <item>MIC</item>
        <item>VOICE_CALL</item>
        <item>DEFAULT</item>
    </string-array>
    <string-array name="modes_of_work">
        <item>Background</item>
        <item>On shake</item>
        <item>On button</item>
    </string-array>
</resources>
