<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:sample="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            android:title="@string/pref_category_general"
            android:key="pref_category_general">
        <ListPreference
                android:defaultValue="@string/pref_mode_of_work_default"
                android:title="@string/pref_mode_of_work"
                android:entries="@array/modes_of_work"
                android:entryValues="@array/modes_of_work"
                android:key="pref_mode_of_work"/>
        <CheckBoxPreference
                android:defaultValue="true"
                android:title="@string/pref_flag_start_mode_only_with_call"
                android:key="pref_flag_start_mode_only_with_call"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_category_on_shake_mode"
            android:key="pref_category_on_shake_mode">
        <com.media.dmitry68.callrecorder.preferences.NumberPreference
                android:title="@string/pref_count_of_shake"
                android:key="pref_count_of_shake"
                style="@style/AppPreference.DialogPreference"
        />
        <com.media.dmitry68.callrecorder.preferences.SeekBarPreference
                android:title="@string/pref_sensitivity_shake"
                android:key="pref_sensitivity_shake"
                sample:maximumValue="100"
                sample:minimumValue="1"
                sample:stepSize="1"
                sample:units="%"
        />
        <CheckBoxPreference
                android:defaultValue="true"
                android:title="@string/pref_flag_vibrate_on_shake"
                android:key="pref_flag_vibrate_on_shake"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_category_name_file">
        <EditTextPreference
                android:defaultValue="@string/pref_file_name_default"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/pref_file_name"
                android:key="pref_file_name"/>
        <CheckBoxPreference
                android:defaultValue="true"
                android:title="@string/pref_flag_show_direction"
                android:key="pref_flag_show_direction_call"/>
        <CheckBoxPreference
                android:defaultValue="true"
                android:title="@string/pref_flag_show_number"
                android:key="pref_flag_show_number"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_category_recorder">
        <ListPreference
                android:defaultValue="@string/pref_audio_source_mic"
                android:title="@string/pref_audio_source"
                android:entries="@array/entries_of_audio_source"
                android:entryValues="@array/entries_of_audio_source"
                android:key="pref_audio_source"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/pref_speakerphone"
            android:key="pref_speakerphone"/>
    </PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>